fixed ugly border styling on windows by setting overflow to auto

--- a/.tmp/styles/main.styl
+++ b/.tmp/styles/main.styl
@@ -28,7 +28,7 @@ border-radius = 7px 7px
     display: flex
     flex: 1 1
     font-family: Tahoma, Arial, Helvetica;
-    overflow-x: scroll
+    overflow: hidden;
 .flextable--body .flextable--cell
     border-right: 1px solid cell-border
     border-bottom: 1px solid cell-border
@@ -54,6 +54,8 @@ border-radius = 7px 7px
 .flextable--data
     white-space: nowrap
     padding: 10px
+    overflow-x: auto;
+    width: 100%
 /*Helper Styling*/
 
 //Centers horizontally and vertically
